--- a/src/app/movies/movie-list/movie-list.component.css
+++ b/src/app/movies/movie-list/movie-list.component.css
@@ -1,8 +1,3 @@
-.movie-container {
-  margin-bottom: 8px;
-
-  padding: 5px;
-}
-.movie-details h1 {
-  font-size: 22px;
+.search-form {
+  margin-bottom: 10px;
 }
