--- a/src/app/movies/movie-list/movie-list.component.html
+++ b/src/app/movies/movie-list/movie-list.component.html
@@ -1,23 +1,13 @@
-
-<div class="row movie-container" *ngFor="let movie of movies">
-
-    <div class="col-md-2">
-      <img [src]="movie.imagePath" alt="{{movie.title}}" class="img-responsive" style="max-height: 200px; border-radius: 3px;">
-    </div>
-    <div class="col-md-10">
-      <div class="movie-details">
-        <h1>{{movie.title}} ({{movie.year}})</h1>
-        <p><em>{{movie.director}}</em></p>
-        <p>{{movie.runtime}} min</p>
-        <p>{{movie.genre}}</p>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Edit</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-        </div>
-      </div>
-    </div>
-    <hr>
-
+<div class="row search-form">
+  <div class="col-xs-6">
+    <form>
+      <label for="search">Search</label>
+      <input type="text" id="search" class="form-control" placeholder="ex: superman">
+    </form>
+  </div>
 </div>
+
+<app-movie-item
+  *ngFor="let movieItem of movies"
+  [movie]="movieItem">
+</app-movie-item>
