--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <app-header></app-header>
-<div class="wrapper movies-wrapper">
 
+<div class="wrapper movies-wrapper">
   <div class="container movies-container">
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
        <app-movies></app-movies>
       </div>
     </div>
+
   </div>
 </div>
