--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,17 +1,18 @@
 <div class="row search-form">
-  <div class="col-xs-6">
+  <div class="col-xs-12">
     <form>
       <label for="search">Search</label>
       <input type="text" id="search" class="form-control" placeholder="ex: superman">
       <button>Submit</button>
     </form>
   </div>
-  <div class="col-xs-6">
-    <button class="btn btn-primary" (click)="openAddForm()">+ Add A Movie</button>
+  <div class="col-xs-12 modal-div">
+    <app-movie-edit></app-movie-edit>
   </div>
 </div>
-
-<app-movie-item
-  *ngFor="let movieItem of movies"
-  [movie]="movieItem">
-</app-movie-item>
+<div class="row">
+  <app-movie-item
+    *ngFor="let movieItem of movies"
+    [movie]="movieItem">
+  </app-movie-item>
+</div>
