--- a/src/app/movies/movie-item/movie-item.component.html
+++ b/src/app/movies/movie-item/movie-item.component.html
@@ -1,7 +1,4 @@
-<div class="row movie-container"
-    (mouseover)="hover=true"
-    (mouseleave)="hover=false"
-    [ngStyle]="{backgroundColor: hover==true ? '#EEEEEE' : 'transparent'}">
+<div class="row movie-container">
   <div class="col-xs-12">
 
     <div class="col-md-2 col-xs-12">
