--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -2,17 +2,24 @@
   <div class="col-xs-12">
     <form>
       <label for="search">Search</label>
-      <input type="text" id="search" class="form-control" placeholder="ex: superman">
-      <button>Submit</button>
+      <input type="text" id="search" class="form-control"
+            placeholder="ex: superman" [formControl]="searchForm">
+      <button type="submit">Submit</button>
     </form>
   </div>
   <div class="col-xs-12 modal-div">
     <app-movie-edit></app-movie-edit>
   </div>
 </div>
-<div class="row">
-  <app-movie-item
-    *ngFor="let movieItem of movies"
-    [movie]="movieItem">
-  </app-movie-item>
+<div class="row" *ngIf="!hasSearch; else result">
+  <div *ngFor="let movieItem of movies">
+    <app-movie-item [movie]="movieItem"></app-movie-item>
+  </div>
+  <div *ngFor="let movieItem of addedMovies">
+   <app-movie-item [movie]="movieItem"></app-movie-item>
+ </div>
 </div>
+
+<ng-template #result>
+  <app-movie-item [movie]="searchResult"></app-movie-item>
+</ng-template>
