added data service, edit, delete

--- a/src/app/movies/add-movie/add-movie.component.html
+++ b/src/app/movies/add-movie/add-movie.component.html
@@ -91,4 +91,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-primary add-button" (click)="open(content)">EDIT</button>
+<button class="btn btn-primary add-button" (click)="open(content)">+ Add a movie</button>
