--- a/src/app/movies/movie-item/movie-item.component.html
+++ b/src/app/movies/movie-item/movie-item.component.html
@@ -1,46 +1,22 @@
-<!--<div class="row movie-container">
-  <div class="col-xs-12">
-
-    <div class="col-xs-2">
-      <img [src]="movie.Poster" alt="{{movie.Title}}" class="img-responsive"
-            style="max-height: 200px; border-radius: 3px;">
+<div class="row movie-container">
+    <div class="col-12 col-md-3">
+      <img [src]="movie.poster" alt="{{movie.title}}" class="img-responsive"
+            style="max-height: 200px; border-radius: 3px; max-width: 130px;">
     </div>
 
-    <div class="col-xs-10">
+    <div class="col-12 col-md-9">
       <div class="movie-details">
-        <h1>{{movie.Title}} ({{movie.Year}})</h1>
-        <p><em>{{movie.Director}}</em></p>
-        <p>{{movie.Runtime}} min</p>
-        <p>{{movie.Genre}}</p>
+        <h1>{{movie.title}} ({{movie.year}})</h1>
+        <p><em>{{movie.director}}</em></p>
+        <p>{{movie.runtime}}</p>
+        <p>{{movie.genre}}</p>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Edit</button>
-          <button class="btn btn-danger" type="button">Delete</button>
+        <div class="col-12">
+          <app-movie-edit [movie]="movie"></app-movie-edit>
+          <button class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
         </div>
       </div>
     </div>
-  </div>
-
-</div>-->
-
-<div class="row movie-container">
-  <div class="col-xs-12">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>{{movie.Title}} ({{movie.Year}})</mat-card-title>
-        <mat-card-subtitle>{{movie.Director}}</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-lg-image [src]="movie.Poster" alt="{{movie.Title}}" class="img-responsive"
-            style="max-height: 200px; border-radius: 3px;">
-      <mat-card-content>
-        <p>{{movie.Runtime}}</p>
-        <p>{{movie.Genre}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>EDIT</button>
-        <button mat-button>DELETE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
 </div>
+<hr>
