--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default my-nav">
     <div class="navbar-header my-nav-items">
-      <a style="cursor: pointer;" (click)="onHomeFetch()" class="navbar-brand">Herolo Movies</a>
+      <a class="navbar-brand">Herolo Movies</a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav my-nav-items">
