--- a/src/app/movies/add-movie/add-movie.component.html
+++ b/src/app/movies/add-movie/add-movie.component.html
@@ -14,7 +14,8 @@
           type="text"
           id="imdbID"
           class="form-control"
-          formControlName="imdbID">
+          formControlName="imdbID"
+          [attr.disabled]="true">
         </div>
       </div>
       <div class="form-group">
@@ -91,4 +92,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-primary add-button" (click)="open(content)">+ Add a movie</button>
+<button class="movie-btn" (click)="open(content)">+ Add a movie</button>
