--- a/src/app/movies/movie-edit/movie-edit.component.html
+++ b/src/app/movies/movie-edit/movie-edit.component.html
@@ -14,7 +14,8 @@
           type="text"
           id="imdbID"
           class="form-control"
-          formControlName="imdbID">
+          formControlName="imdbID"
+          [attr.disabled]="true">
         </div>
       </div>
       <div class="form-group">
@@ -84,11 +85,11 @@
           formControlName="poster">
         </div>
       </div>
-      <button type="submit" class="btn btn-success">Save</button>
-      <button type="button" class="btn btn-danger" (click)="modal.dismiss('canceled')">Cancel</button>
-
+        <button type="submit" class="btn btn-success">Save</button>
+        <button type="button" class="btn btn-danger" (click)="modal.dismiss('canceled')">Cancel</button>
     </form>
   </div>
+
 </ng-template>
 
-<button class="btn btn-primary add-button" (click)="open(content)">EDIT</button>
+<button class="movie-btn" (click)="open(content)"><i class="fas fa-edit"></i></button>
