--- a/src/app/movies/movie-item/movie-item.component.css
+++ b/src/app/movies/movie-item/movie-item.component.css
@@ -4,8 +4,38 @@
 }
 .movie-details h1 {
   font-size: 22px;
+  color: #A9A9A9;
 }
 .movieMouseOver {
   background-color: blue;
   color: white;
+}
+.movie-btn {
+  border: none;
+  background-color: white;
+  color: #DB5461;
+  font-size: 25px;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.movie-btn:hover {
+  background-color: #DB5461;
+  color: white;
+}
+
+.movie-card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.movie-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-container {
+  padding: 2px 16px;
 }
