--- a/src/app/movies/movie-item/movie-item.component.html
+++ b/src/app/movies/movie-item/movie-item.component.html
@@ -14,9 +14,18 @@
       <div class="row">
         <div class="col-12">
           <app-movie-edit [movie]="movie"></app-movie-edit>
-          <button class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
+          <button class="movie-btn" type="button" (click)="onDelete()"><i class="fas fa-trash-alt"></i></button>
         </div>
       </div>
     </div>
 </div>
 <hr>
+<!--<div class="row movie-container">
+  <div class="col-12 col-md-3 movie-card">
+    <img [src]="movie.poster" alt="{{movie.title}}" style="width:100%">
+    <div class="row card-container">
+      <h4><b>John Doe</b></h4>
+      <p>Architect & Engineer</p>
+    </div>
+  </div>
+</div>-->
