searchresults loop api

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -13,17 +13,15 @@
   </div>
 </div>
 
-<div *ngIf="!hasSearch; else searchResult">
-  <div class="row" *ngFor="let movieItem of movies">
-    <div class="col-12">
+<div class="row" *ngFor="let movieItem of movies">
+  <div class="col-12">
     <app-movie-item [movie]="movieItem"></app-movie-item>
-    </div>
   </div>
- </div>
+</div>
  <!--<div *ngFor="let movieItem of addedMovies">
     <app-movie-item [movie]="movieItem"></app-movie-item>
 </div>-->
 
-<ng-template #searchResult>
+<!--<ng-template #searchResult>
     <app-movie-item [movie]="movies"></app-movie-item>
-</ng-template>
+</ng-template>-->
