--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-default my-nav">
-    <div class="navbar-header my-nav-items">
-      <a class="navbar-brand">Herolo Movies</a>
-    </div>
-    <div class="navbar-default">
-      <ul class="nav navbar-nav my-nav-items">
+<div class="nav-wrapper">
+  <nav class="navbar navbar-default my-nav nav-container">
+      <div class="navbar-header my-nav-items">
+        <a class="navbar-brand" style="cursor: pointer;" >Herolo Movies</a>
+      </div>
+      <div class="navbar-default">
+        <ul class="nav navbar-nav my-nav-items">
 
-      </ul>
-    </div>
-</nav>
+        </ul>
+
+      </div>
+    </nav>
+</div>
