--- a/src/app/movies/movie-edit/movie-edit.component.html
+++ b/src/app/movies/movie-edit/movie-edit.component.html
@@ -1,13 +1,13 @@
 <ng-template #errorpopup let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">{{getErrorMessage()}}</h4>
+    <h4 class="modal-title" id="modal-basic-title" style="color: #404040;">{{getErrorMessage()}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <form [formGroup]="errorForm" (ngSubmit)="modal.dismiss('saved')">
-        <button type="submit" class="btn btn-success">OK</button>
+        <button type="submit" class="movie-btn-ok">OK</button>
     </form>
   </div>
 
@@ -15,7 +15,7 @@
 
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add a Movie</h4>
+    <h4 class="modal-title" id="modal-basic-title" style="color: #404040;">Edit A Movie</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -100,13 +100,15 @@
           formControlName="poster">
         </div>
       </div>
+      <div class="buttons-form-div">
+        <button type="button" class="movie-btn-cancel" (click)="modal.dismiss('canceled')">Cancel</button>
         <div *ngIf="movieForm.valid">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="movie-btn-ok">Save</button>
         </div>
         <div *ngIf="!movieForm.valid">
-          <button type="button" class="btn btn-success" (click)="open(errorpopup)">Save</button>
+          <button type="button" class="movie-btn-ok" (click)="open(errorpopup)">Save</button>
         </div>
-        <button type="button" class="btn btn-danger" (click)="modal.dismiss('canceled')">Cancel</button>
+      </div>
     </form>
   </div>
 
