--- a/src/app/movies/add-movie/add-movie.component.css
+++ b/src/app/movies/add-movie/add-movie.component.css
@@ -1,13 +1,29 @@
 .movie-btn {
   border: 1px solid #DB5461;
-  background-color: white;
+  background-color: #DB5461;
   padding: 5px 20px;
-  color: #DB5461;
+  color: white;
   border-radius: 5px;
   margin: 10px;
 }
 
 .movie-btn:hover {
+  background-color: white;
+  color: #DB5461;
+}
+.buttons-form-div {
+  display: flex;
+  justify-content: flex-end;
+}
+.movie-btn-ok {
+  border: 1px solid #DB5461;
   background-color: #DB5461;
+  padding: 5px 20px;
   color: white;
+  border-radius: 5px;
+  margin: 10px;
+}
+.movie-btn-ok:hover {
+  background-color: white;
+  color: #DB5461;
 }
