--- a/src/app/movies/movie-item/movie-item.component.html
+++ b/src/app/movies/movie-item/movie-item.component.html
@@ -8,25 +8,22 @@
       <div class="movie-details">
         <h1>{{movie.title}} ({{movie.year}})</h1>
         <p><em>{{movie.director}}</em></p>
-        <p>{{movie.runtime}}</p>
-        <p>{{movie.genre}}</p>
+        <p id="runtime">{{movie.runtime}}</p>
+        <p id="genre">{{movie.genre}}</p>
       </div>
       <div class="row">
         <div class="col-12">
           <app-movie-edit [movie]="movie"></app-movie-edit>
           <app-delete-movie [movie]="movie"></app-delete-movie>
-          <!--<button class="movie-btn" type="button" (click)="onDelete()"><i class="fas fa-trash-alt"></i></button>-->
         </div>
       </div>
     </div>
 </div>
-<hr>
-<!--<div class="row movie-container">
-  <div class="col-12 col-md-3 movie-card">
-    <img [src]="movie.poster" alt="{{movie.title}}" style="width:100%">
-    <div class="row card-container">
-      <h4><b>John Doe</b></h4>
-      <p>Architect & Engineer</p>
-    </div>
-  </div>
-</div>-->
+
+
+    <!--  <div class="movie-card">
+        <img [src]="movie.poster" alt="{{movie.title}}" style="width:100%">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+
+      </div>-->
