--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,20 +1,18 @@
 <div class="row search-form">
-  <div class="col-6">
-    <form (ngSubmit)="onSearchSubmit()">
-      <label for="search">Search</label>
+  <div class="col-12 col-md-6">
+    <form class="search-form-input" (ngSubmit)="onSearchSubmit()">
       <input type="text" id="search" class="form-control"
-            placeholder="ex: superman" [formControl]="searchForm">
-      <button type="submit">Submit</button>
+            placeholder="Search by keyword" [formControl]="searchForm">
+      <button type="submit"><i class="fa fa-search"></i></button>
     </form>
     <p>{{error}}</p>
   </div>
-  <div class="col-6 modal-div">
+
+  <div class="col-12 col-md-6">
     <app-add-movie></app-add-movie>
   </div>
 </div>
 
-<div class="row" *ngFor="let movieItem of movies">
-  <div class="col-12">
+<div *ngFor="let movieItem of movies">
     <app-movie-item [movie]="movieItem"></app-movie-item>
-  </div>
 </div>
