--- a/src/app/movies/movie-item/movie-item.component.css
+++ b/src/app/movies/movie-item/movie-item.component.css
@@ -1,6 +1,8 @@
 .movie-container {
   margin-bottom: 25px;
-  padding: 5px;
+  margin-right: 1vw;
+  margin-left: 1vw;
+  padding: 8px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   background-color: white;
@@ -43,4 +45,22 @@
 .movie-btn:hover {
   background-color: #DB5461;
   color: white;
+}
+
+@media (max-width: 992px) {
+  .col-centered {
+    text-align: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .movie-details {
+    text-align: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .movie-options {
+    text-align: center;
+  }
 }
