--- a/src/app/movies/movie-item/movie-item.component.css
+++ b/src/app/movies/movie-item/movie-item.component.css
@@ -1,5 +1,7 @@
 .movie-container {
   margin-bottom: 25px;
+  margin-left: 1vw;
+  margin-right: 1vw;
   padding: 8px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -48,6 +50,7 @@
 @media (max-width: 992px) {
   .col-centered {
     text-align: center;
+    margin-bottom: 12px;
   }
 }
 
