--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,11 +4,13 @@
   background-color: #EFEFEF;
   height: 100vh;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 .movies-container {
   width: 80vw;
   background-color: #EFEFEF;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   border-right: 3px solid #DB5461;
   border-left: 3px solid #DB5461;
   box-shadow: 0 4px 8px 0 rgba(219, 84, 97, 0.5);
@@ -19,6 +21,7 @@
     padding: 0px;
     background-color: #EFEFEF;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     border-right: none;
     border-left: none;
     box-shadow: none;
