--- a/src/app/movies/movie-edit/movie-edit.component.html
+++ b/src/app/movies/movie-edit/movie-edit.component.html
@@ -67,15 +67,19 @@
         <label for="genre">Genre</label>
         <div class="input-group">
           <select
-            class="form-controle"
+            class="form-control"
             type="text"
             id="genre"
             formControlName="genre">
-            <option value="drama">Drama</option>
-            <option value="sci-fi">Sci-fi</option>
+            <option value="drama">Action</option>
             <option value="biography">Biography</option>
+            <option value="drama">Comedy</option>
             <option value="crime">Crime</option>
+            <option value="drama">Drama</option>
+            <option value="drama">Horror</option>
             <option value="romance">Romance</option>
+            <option value="sci-fi">Sci-fi</option>
+            <option value="drama">Thriller</option>
           </select>
         </div>
       </div>
