--- a/src/app/movies/add-movie/add-movie.component.css
+++ b/src/app/movies/add-movie/add-movie.component.css
@@ -4,12 +4,44 @@
   padding: 5px 20px;
   color: white;
   border-radius: 5px;
-  margin: 10px;
+  float: right;
+}
+.mobile-movie-btn {
+  display: none;
+}
+
+@media screen and (max-width:992px) {
+  .mobile-movie-btn {
+    display: inline-block;
+    background-color: #DB5461;
+    color: white;
+    border: 1px solid #DB5461;
+    border-radius: 5px;
+    float: right;
+  }
+}
+@media screen and (max-width:992px) {
+  .movie-btn {
+    display: none;
+  }
 }
 
 .movie-btn:hover {
   background-color: white;
   color: #DB5461;
+}
+.movie-btn-cancel {
+  border: 1px solid #DB5461;
+  background-color: white;
+  padding: 5px 20px;
+  color: #DB5461;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.movie-btn-cancel:hover {
+  background-color: #DB5461;
+  color: white;
 }
 .buttons-form-div {
   display: flex;
