--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,5 +1,5 @@
 <div class="row search-form">
-  <div class="col-12 col-md-6">
+  <div class="centered col-10 col-md-6">
     <form class="search-form-input" (ngSubmit)="onSearchSubmit()">
       <input type="text" id="search" class="form-control"
             placeholder="Search by keyword" [formControl]="searchForm">
@@ -8,7 +8,7 @@
     <p>{{error}}</p>
   </div>
 
-  <div class="col-12 col-md-6">
+  <div class="centered col-2 col-md-6">
     <app-add-movie></app-add-movie>
   </div>
 </div>
