--- a/src/app/movies/add-movie/add-movie.component.css
+++ b/src/app/movies/add-movie/add-movie.component.css
@@ -18,6 +18,7 @@
     border: 1px solid #DB5461;
     border-radius: 5px;
     float: right;
+    padding: 7px 12px;
   }
 }
 @media screen and (max-width:992px) {
