--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<app-header></app-header>
+<div class="navbar-wrapper">
+  <div class="movies-navbar">
+    <h1>Herolo Cinema</h1>
+    <i class="fas fa-film"></i>
+  </div>
+</div>
 
-<div class="wrapper movies-wrapper">
-  <div class="container movies-container">
-
+<div class="movies-wrapper">
+  <div class="movies-container">
     <app-movies></app-movies>
   </div>
 </div>
