--- a/src/app/movies/movie-item/movie-item.component.css
+++ b/src/app/movies/movie-item/movie-item.component.css
@@ -1,13 +1,16 @@
 .movie-container {
-  width: 75vw;
-  margin-bottom: 25px;
-  margin-left: 1vw;
-  margin-right: 1vw;
+  width: 65vw;
+  margin: 23px auto;
   padding: 8px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   background-color: white;
   border-radius: 9px;
+}
+@media (max-width: 992px) {
+  .movie-container {
+    width: 90vw;
+  }
 }
 .movie-details h1 {
   font-size: 22px;
