--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,8 @@
     <app-movies></app-movies>
   </div>
 </div>
+<div class="footer-wrapper">
+<div class="movies-footer">
+  <p>Designed with <i class="fas fa-heart"></i> by LoreneVal for Herolo</p>
+</div>
+</div>
