--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,12 +2,11 @@
   display: flex;
   justify-content: center;
   background-color: white;
-  height: 100vh;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
-  max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
 }
 .movies-container {
   width: 70vw;
