fix wrapper scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,8 +22,12 @@
 }
 .navbar-wrapper {
   background-color: white;
-  height: 100%;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  position: sticky;
 }
+
 .footer-wrapper {
   height: 80%;
 
