--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper">
+<div class="navbar-wrapper sticky">
   <div class="movies-navbar">
     <h1>Herolo Cinema</h1>
     <i class="fas fa-film"></i>
